add docker compose, start hello world code
