# open-api-spec.yml
@@ -17,7 +17,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ServerStatus'
+                $ref: '#/components/schemas/HealthCheck'
         default:
           $ref: '#/components/schemas/HttpError'
   /guards:
@@ -176,7 +176,7 @@ components:
       required:
         - status
         - message
-    ServerStatus:
+    HealthCheck:
       type: object
       properties:
         status:
